// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Namibia configs: components/IRS Reports/JurisdictionReport Namibia configs: renders correctly 1`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "",
  "useDrillDown": true,
}
`;

exports[`Namibia configs: components/IRS Reports/JurisdictionReport Namibia configs: renders correctly: Namibia configs: breadcrumbs 1`] = `
Array [
  <li
    className="breadcrumb-item"
  >
    <Link
      key="0"
      to="/"
    >
      <LinkAnchor
        href="/"
        navigate={[Function]}
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="1"
      to="/intervention/irs/report"
    >
      <LinkAnchor
        href="/intervention/irs/report"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report"
          onClick={[Function]}
        >
          IRS Reporting
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    aria-current="page"
    className="active breadcrumb-item"
  >
    IRS 2019-09-05 TEST
  </li>,
]
`;

exports[`Namibia configs: components/IRS Reports/JurisdictionReport Namibia configs: renders correctly: Namibia configs: page title 1`] = `
<h3
  className="mb-3 page-title"
>
  IRS Reporting: IRS 2019-09-05 TEST
</h3>
`;

exports[`Namibia configs: components/IRS Reports/JurisdictionReport drills down correctly 1`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "",
  "useDrillDown": true,
}
`;

exports[`Namibia configs: components/IRS Reports/JurisdictionReport drills down correctly 2`] = `
Object {
  "CellComponent": [Function],
  "columns": Any<Object>,
  "data": Any<Object>,
  "extraCellProps": Object {
    "urlPath": "/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce",
  },
  "getTdProps": [Function],
  "hasChildren": [Function],
  "identifierField": "jurisdiction_id",
  "linkerField": "jurisdiction_name",
  "loading": false,
  "loadingComponent": [Function],
  "paginate": false,
  "parentIdentifierField": "jurisdiction_parent_id",
  "renderNullDataComponent": [Function],
  "resize": true,
  "rootParentId": "0dc2d15b-be1d-45d3-93d8-043a3a916f30",
  "useDrillDown": true,
}
`;
